# dl-RAG-denseAndKG

./: .gitignore  01_corpus_preparation.ipynb  02_nq_filtering.ipynb  03_embedding.ipynb  04_answer_preparation.ipynb  05_answer_curation.ipynb  06_apply_curation.ipynb  07_kg_rerank.ipynb  07_kg_rerank.py  08_llm_eval.ipynb  08_llm_eval.py  09_llm_judge.ipynb  09_llm_judge.py  CLAUDE.md  README.md  _extract_cells.py  answer_curation.ipynb  answer_preparation.ipynb  apply_curation.ipynb  dafare.txt  embedding.ipynb  nq_filtering.ipynb  pyproject.toml  wikidata_preparation.ipynb
base/: preprocessing.ipynb
data/NQ_answer/: curation_results.jsonl  kg_rerank_grid.parquet  queries_curated.jsonl  queries_subset.jsonl  query_embeddings.npy  query_embeddings_curated.npy  top100_candidates.parquet  top100_curated.parquet  top100_merged.parquet
data/Wikidata_service/: queryPredicati.csv
data/db/: labels.parquet
data/n3/: banned_hubs_t5000.parquet  hop_sets_t5000.parquet
documents/: DATA_DICTIONARY.md  GLOSSARIO.md  PROJECT_NOTES.md  REPO_INVENTORY.md  _notes  abstract.md  discussion.md  introduction.md  method.md  related_work.md  results.md  verify_abstract_numbers.py  verify_report_numbers.py
relazione/bozza/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: _copy_nb.py  _extract_cells.py  _extract_curation_cells.py  ablation_diagnostic.py  build_labels.py  build_n1.py  build_n3.py  build_test_queries.py  hdt_export_per_predicate.py  hdt_query_test.py  kg.py  kg_advanced.py  node_stats.py  patch_answer_preparation.py  patch_refined.py  seed_degree_stats.py  verify_completeness.py
scripts/diagnostic/: _compare_wildcard_vs_perpredicate.py  ablation_diagnostic.py  check_qids.py  check_table1_vs_nb09.py  verify_completeness.py
scripts/legacy/: _extract_cells.py  build_n3.py  (+3 more)
utils/: __init__.py  kg.py  text_processing.py
(+228 files in other folders)
